<resources>
    <string name="app_name">维度影院</string>
    <string name="hotmovie">热门电影</string>
    <string name="releasemovie">正在上映</string>
    <string name="comingsoonmovie">即将上映</string>
    <string name="detail">详情</string>
    <string name="prevue">预告</string>
    <string name="movie_picture">剧照</string>
    <string name="movie_commit">影评</string>
    <string name="buy">购票</string>
    <string name="movie_detail">电影详情</string>
    <string name="recommend">推荐影院</string>
    <string name="near">附近影院</string>
    <string name="pay_type">请选择支付方式</string>
    <string name="WeChat_pay">微信支付</string>
    <string name="zhifubao_pay">支付宝支付</string>
    <string name="pay_price">需支付0.0元</string>
    <string name="pay_result_callback_msg">支付</string>
    <string name="search">搜索</string>
</resources>
