<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mvp.view.activity.MovieDetailActivity"
    android:background="@mipmap/movie_bg_vertical"
    android:gravity="center_horizontal"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#000"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal"
        android:gravity="center">
        <ImageView
            android:layout_width="20dp"
            android:layout_height="21dp"
            android:layout_marginRight="5dp"
            android:background="@mipmap/com_icon_movie_default"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#fff"
            android:text="@string/movie_detail"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <ImageView
            android:id="@+id/collection_sel"
            android:layout_width="23dp"
            android:layout_height="20dp"
            android:src="@drawable/com_icon_collection_default"
            />
    </LinearLayout>
    <TextView android:id="@+id/movie_detail_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/movie_detail_img"
        android:layout_width="280dp"
        android:layout_height="370dp"
        app:roundedCornerRadius="10dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:gravity="center">
        <Button
            android:id="@+id/movie_datail_btn"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="#fff"
            android:background="@drawable/button_radius"
            android:text="@string/detail"/>
        <Button
            android:id="@+id/movie_prevue_btn"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="#fff"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_radius"
            android:text="@string/prevue"/>
        <Button
            android:id="@+id/movie_picture_btn"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="#fff"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_radius"
            android:text="@string/movie_picture"/>
        <Button
            android:id="@+id/movie_commit_btn"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:textColor="#fff"
            android:layout_marginLeft="10dp"
            android:background="@drawable/button_radius"
            android:text="@string/movie_commit"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center">
        <Button
            android:id="@+id/movie_betail_fan"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@mipmap/com_icon_my_default"/>
        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <Button android:id="@+id/buy_btn"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:background="@drawable/button_buy"
            android:text="@string/buy"
            android:textColor="#fff"/>
    </LinearLayout>
</LinearLayout>